# stocks-services-graphql

./: Cargo.toml  Dockerfile  README.md  diesel.toml
common-utils/: Cargo.toml
common-utils/src/: lib.rs
src/: graphql.rs  kafka_sockets.rs  lib.rs  main.rs  stock_functions.rs
src/persistence/: connection.rs  mod.rs  model.rs  repository.rs  schema.rs
