[package]
name = "common-utils"
version = "0.1.0"
edition = "2021"
authors = ["Pablo Zuñiga <pablo.zuniga.mata@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
kafka = "0.9.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
